# mediar

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  demo.cast  demo.md  demo.py
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  tmdb.rs  video.rs
