[package]
name = "mediar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.26", features = ["json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14.0"
serde_json = "1.0"
