[package]
name = "mediar"
description = "Rename and move media files using metadata from TMDB"
readme = "README.md"
version = "0.1.3"
edition = "2024"
authors = ["Shad Sharma <shadanan@gmail.com>"]
license = "MIT"
repository = "https://github.com/shadanan/mediar"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
dotenvy = "0.15.7"
futures = "0.3.31"
inquire = "0.9.1"
regex = "1.12.2"
reqwest = { version = "0.13.0", features = ["json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tabled = "0.20.0"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.14.0"
serde_json = "1.0"
